--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetiich <justinmajetich@gmail.com>
+Abenezer Asameneew <Abenezerasamenew@gmail.com>
+Nathan Mathewos <nathanm5266@gmail.com>
